completed crud app

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <%- include('./partials/nav.ejs') %>
+    <main>
+        <h1></h1>
+    </main>
 </body>
 </html>
