--- a/views/blogs/show.ejs
+++ b/views/blogs/show.ejs
@@ -6,6 +6,7 @@
     <title><%= blog.postTitle %></title>
 </head>
 <body>
+    <%- include('../partials/nav.ejs') %>
    <main>
     <h1><%= blog.postTitle %></h1>
    <div class="post">
